plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'Students'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}

	configurations {
		compileOnly{
			extendsFrom annotationProcessor
		}
	}
}

repositories {
	mavenCentral()
}

dependencies {
	tasks.withType(JavaCompile) {
		options.compilerArgs += ['--enable-preview']
	}

	//Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	//ThymeLeaf
	implementation 'org.thymeleaf:thymeleaf:3.1.2.RELEASE'
	//便利機能、ユーティリティ
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	//Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	//MySQLドライバ
	runtimeOnly 'com.mysql:mysql-connector-j'
}

tasks.named('test') {
	useJUnitPlatform()
}
